Almost finished with navigation bar. Niggling issues remaining including breakpoint for collapse, padding of social media icons and padding of brand and collapse button on small screens

--- a/site/web/app/themes/alicia/assets/styles/common/_variables.scss
+++ b/site/web/app/themes/alicia/assets/styles/common/_variables.scss
@@ -20,6 +20,9 @@ $white: #ffffff;
 $maroon: #82261d;
 $black: #000000;
 
+$fb-blue: #3a599e;
+$tw-blue: #5ba8da;
+
 @font-face {
 	font-family: NewsGothicOblique;
 	src: url('../fonts/NewsGothicOblique.ttf');
