--- a/site/web/app/themes/alicia/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/alicia/assets/styles/layouts/_header.scss
@@ -1,4 +1,3 @@
-
 $navbarheight: 80px;
 
 #navbar {
@@ -6,37 +5,30 @@ $navbarheight: 80px;
   z-index: 9999;   // Give high stack order to place in front of background image
   transition: top 0.2s ease-in-out; // Transition for hide/show of navbar on scroll
   height: $navbarheight;
-  //background-color: red;
   width: 100%;
 }
 
-// navcontainer is nested div within the navbar
-/*
-#navcontainer {
-  height: 100%;
-  position: relative;
-  left: 5%;
-}
-*/
-
 #navbar img {
-  top: 50%;
-  bottom: 50%;
-  transform: translate(0%, -50%); 
-  display: inline;
-  height: 60px;
-  width: auto;
+  height: 70px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 #navbar ul.topnav {
   list-style-type: none;  // Removes bullets from list
   position: absolute;     // positioned relative to first positioned (non static) ancestor which here should be the #navbar
   display: inline;
-  text-align:center;
-  //height: 80px;
+  height: $navbarheight;
+  @media screen and (max-width: 680px) {
+    height: initial;
+  }           // Can't specify a fixed height because it stops navbar droping on responsive
   width: 100%;
   margin: 0;              // Remove normal list margins
-  padding: 0;             // Remove normal list padding
+  padding-left: 5%;         // Remove normal list padding
+  padding-right: 5%;
+  @media screen and (max-width: 680px) {
+    padding: 0;
+  }
   overflow: hidden;
   background-color: rgba(0,0,0,0.4); // Color must be on list so that the background grows to fit an uncollapsed menu
 }
@@ -52,16 +44,20 @@ $navbarheight: 80px;
   top: 0;
 }
 
-ul.topnav li {display: inline;}
+ul.topnav li {
+  display: inline;
+  line-height: 10px;
+}
 
-ul.topnav li a {
+ul.topnav li:not(:first-child) a {
   display: inline-block;
   color: $white;
   text-align: center;
-  padding: 30px 30px;
+  padding: 35px 4%;
   text-decoration: none;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 15px;
+  font-weight: lighter;
 }
 
 // Change background color of links on hover 
@@ -69,6 +65,17 @@ ul.topnav li a:hover {background-color: rgba(0,0,0,0.2);}
 
 // Hide the list item that contains the link that should open and close the topnav on small screens 
 ul.topnav li.icon {display: none;}
+
+//Social Navigation links
+ul.topnav li.social-icon {
+  float: right;
+  display: inline-block;
+  padding: 0;
+}
+
+
+ul.topnav .fa-facebook { color: $fb-blue; }
+ul.topnav .fa-twitter { color: $tw-blue;}
 
 // When the screen is less than 680 pixels wide, hide all list items, except for the first one ("Home"). Show the list item that contains the link to open and close the topnav (li.icon) 
 @media screen and (max-width: 680px) {
@@ -97,9 +104,9 @@ ul.topnav li.icon {display: none;}
   }
 }
 
-#navbar ul li:not(:first-child):after { 
+#navbar ul li:not(:first-child):not(.social-icon):after { 
   content: " ";
-  word-spacing: 2em;
+  word-spacing: 0.5em;
   background-repeat: no-repeat;
   background-position: 50% 60%;
   background-image: url('../images/nav-separator.png');
